# catalan-structures

./: README.md  using_sym-plot
CatalanStructures/: CatalanStructures.cabal  CatalanStructures.cabal~  LICENSE
CatalanStructures/GUI/: DyckPathWin.hs  DyckPathWin.hs~  GUI.hs  GUI.hs~  PermutationWin.hs  PermutationWin.hs~  (+4 more)
GUI/: GUI.hs  GUI.hs~  mainGui.glade
Math/: Av123.hs  Av321.hs  CatalanStructures.hs  CatalanStructures.hs~  DyckPath.hs  DyckPath.hs~  Internal.hs  PermStat.hs  Plotter.hs  StackSortPerm.hs  StackSortPerm.hs~  Triangulations.hs  Triangulations.hs~  YoungTableaux.hs  YoungTableaux.hs~  dyckPathStat.h  makefile
final_report/: .CatalanStructuresBijectionsStuartPaton2013.tex.swp  CatalanStructuresBib.bib  CatalanStructuresBib.bib~  CatalanStructuresBijectionsStuartPaton2013.aux  CatalanStructuresBijectionsStuartPaton2013.bbl  CatalanStructuresBijectionsStuartPaton2013.blg  CatalanStructuresBijectionsStuartPaton2013.tex  CatalanStructuresBijectionsStuartPaton2013.tex.bak  CatalanStructuresBijectionsStuartPaton2013.tex~  CatalanStructuresBijectionsStuartPaton2013.toc  titlePage.docx  titlePage.odt  titlePage.tex
fourth_year_project/: README  README~
posterPresentation/: .~lock.posterPresentation.odp#  .~lock.posterPresentation.pptx#  posterPresentation.odp  posterPresentation.pptx
programDesignDocumentation/: programDesign.tex~
test/: CatalanStructures.cabal
test/Math/: CatalanStructures.hs  CatalanStructures.hs~  DyckPath.hs  Internal.hs  StackSortPerm.hs  Triangulations.hs  YoungTableaux.hs  dyckPathStat.c
test/cfiles/: bijections.c
(+60 files in other folders)
